[package]
name = "moonlight-ash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
async-std = { version = "1.10.0", features = ["attributes"] }
clap = "3.0.14"
flexi_logger = "0.22.3"
log = "0.4.14"
maenami = { path = "../maenami" }
moonlight-openvr = { path = "../moonlight-openvr" }
vek = "0.15.6"
wgpu = "0.12.0"
winit = "0.26.1"
