[package]
name = "moonlight-uketsukejou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
async-std = { version = "1.10.0", features = ["attributes"] }
clap = { version = "3.0.10", features = ["derive"] }
flexi_logger = "0.22.2"
log = "0.4.14"
mlua = { version = "0.7.3", features = ["vendored", "lua54", "async", "send", "serialize", "macros"] }
serde = { version = "1.0.134", features = ["derive"] }
time = { version = "0.3.6", features = ["formatting", "serde"] }
vek = "0.15.5"
